# src/lib.rs
@@ -6,7 +6,7 @@
 
 //! A hubuum API client library.
 //!
-//! Version 0.7.0 targets Hubuum server v0.0.4. See the repository's
+//! Version 0.7.2 targets Hubuum server v0.0.5. See the repository's
 //! `COMPATIBILITY.md` for the tested image digest and compatibility history.
 //!
 //! async:
@@ -45,7 +45,7 @@ pub mod types;
 mod endpoints;
 
 /// Hubuum server release targeted by this client release.
-pub const TARGET_SERVER_VERSION: &str = "0.0.4";
+pub const TARGET_SERVER_VERSION: &str = "0.0.5";
 
 // Re-export commonly used items
 #[cfg(feature = "async")]
@@ -68,43 +68,44 @@ pub use types::{
     AuthProvidersResponse, AuthenticationConfig, BackupConfig, BackupDocument, BackupHistory,
     BackupManifest, BackupRequest, BackupState, BackupTaskDetails, BaseUrl, CURRENT_BACKUP_VERSION,
     CURRENT_IMPORT_VERSION, ClassComputationState, ClassHistory, ClassKey, ClassParams,
-    ClearRateLimitResponse, ClientAllowlistStatus, ClientConfig, ClientPaginationConfig,
-    CollectionHistory, CollectionKey, ComputedFieldDefinition, ComputedFieldDefinitionId,
-    ComputedFieldDefinitionPatch, ComputedFieldDefinitionRequest, ComputedFieldDeleteResponse,
-    ComputedFieldError, ComputedFieldListResponse, ComputedFieldMutationResponse,
-    ComputedFieldOperation, ComputedFieldPreviewRequest, ComputedFieldPreviewResponse,
-    ComputedFieldQueryScope, ComputedFieldSelector, ComputedFieldVisibility, ComputedObject,
-    ComputedObjectScopes, ComputedResultType, ComputedScope, CountsResponse, Credentials,
-    DEFAULT_METRICS_PATH, DatabaseConfig, DbStateResponse, EventConfig, EventDelivery,
-    EventDeliveryHealthResponse, EventDeliveryId, EventDeliveryQueueHealth, EventDeliveryStatus,
-    EventDeliveryStatusCounts, EventDeliveryUpdateResponse, EventFanoutHealth, EventResponse,
-    EventSink, EventSinkDeliveryHealth, EventSinkGet, EventSinkKey, EventSinkKind,
-    EventSubscription, EventSubscriptionDeliveryHealth, EventSubscriptionFilter,
-    EventSubscriptionId, EventWorkerHealth, EventWorkerWakeupStats, ExportConfig,
-    ExportContentType, ExportInclude, ExportIncludeRelatedDirection, ExportIncludeRelatedObject,
-    ExportIncludeRelatedSort, ExportJsonResponse, ExportLimits, ExportMeta,
-    ExportMissingDataPolicy, ExportRelationContext, ExportRequest, ExportResult, ExportScope,
-    ExportScopeKind, ExportTaskDetails, ExportTemplateHistory, ExportTemplateKind,
-    ExportTemplateRunRequest, ExportWarning, FullCollectionHistory, FullDbStateResponse,
-    FullImportClassRelationInput, FullImportGraph, FullImportRequest, GroupKey, HistoryId,
-    HistoryMetadata, IdentityScopeKey, ImportAtomicity, ImportClassInput, ImportClassRelationInput,
-    ImportCollectionInput, ImportCollectionPermissionInput, ImportCollisionPolicy,
-    ImportEventSinkInput, ImportEventSubscriptionInput, ImportExportTemplateInput, ImportGraph,
-    ImportGroupInput, ImportGroupMembershipInput, ImportIdentityScopeInput,
-    ImportMembershipSourceInput, ImportMode, ImportObjectInput, ImportObjectRelationInput,
-    ImportPermissionPolicy, ImportPrincipalInput, ImportPrincipalSubtype, ImportRemoteTargetInput,
-    ImportRequest, ImportResultId, ImportRunResult, ImportTaskDetails, ImportTaskResultResponse,
-    LDAP_PROVIDER_KIND, LOCAL_IDENTITY_SCOPE, LOCAL_PROVIDER_KIND, LoginRateLimitConfig,
-    LoginRateLimitEntry, LoginRateLimitState, LogoutTokenRequest, NetworkConfig, NewEventSink,
-    NewEventSubscription, ObjectHistory, ObjectKey, PaginationConfig, PermissionConfig,
-    PermissionId, Permissions, PersonalComputedFieldDefinitionRequest, PrincipalId, PrincipalKey,
-    PrincipalSettings, ProbeResponse, Provenance, ProvenanceActor, ProvenancePrincipal,
-    RESTORE_CONFIRMATION_PHRASE, ReleaseRateLimitResponse, RemoteCallConfig, RemoteCallResultId,
-    RemoteTargetHistory, RestoreCapability, RestoreConfig, RestoreConfirmRequest, RestoreId,
-    RestoreJobStatus, RestoreStageResponse, RestoreTimestamps, RestoreValidationSummary,
-    RunningConfig, RunningLoginRateLimitConfig, SecretStatus, ServerConfig, SharedComputedScope,
-    TaskConfig, TaskDetails, TaskEventId, TaskEventResponse, TaskId, TaskKind, TaskLinks,
-    TaskProgress, TaskQueueStateResponse, TaskResponse, TaskStatus, TlsConfig, Token, TokenId,
+    ClearRateLimitResponse, ClientAllowlistStatus, ClientAuthenticationConfig, ClientConfig,
+    ClientPaginationConfig, CollectionHistory, CollectionKey, ComputedFieldDefinition,
+    ComputedFieldDefinitionId, ComputedFieldDefinitionPatch, ComputedFieldDefinitionRequest,
+    ComputedFieldDeleteResponse, ComputedFieldError, ComputedFieldListResponse,
+    ComputedFieldMutationResponse, ComputedFieldOperation, ComputedFieldPreviewRequest,
+    ComputedFieldPreviewResponse, ComputedFieldQueryScope, ComputedFieldSelector,
+    ComputedFieldVisibility, ComputedObject, ComputedObjectScopes, ComputedResultType,
+    ComputedScope, CountsResponse, Credentials, DEFAULT_METRICS_PATH, DatabaseConfig,
+    DbStateResponse, EventConfig, EventDelivery, EventDeliveryHealthResponse, EventDeliveryId,
+    EventDeliveryQueueHealth, EventDeliveryStatus, EventDeliveryStatusCounts,
+    EventDeliveryUpdateResponse, EventFanoutHealth, EventResponse, EventSink,
+    EventSinkDeliveryHealth, EventSinkGet, EventSinkKey, EventSinkKind, EventSubscription,
+    EventSubscriptionDeliveryHealth, EventSubscriptionFilter, EventSubscriptionId,
+    EventWorkerHealth, EventWorkerWakeupStats, ExportConfig, ExportContentType, ExportInclude,
+    ExportIncludeRelatedDirection, ExportIncludeRelatedObject, ExportIncludeRelatedSort,
+    ExportJsonResponse, ExportLimits, ExportMeta, ExportMissingDataPolicy, ExportRelationContext,
+    ExportRequest, ExportResult, ExportScope, ExportScopeKind, ExportTaskDetails,
+    ExportTemplateHistory, ExportTemplateKind, ExportTemplateRunRequest, ExportWarning,
+    FullCollectionHistory, FullDbStateResponse, FullImportClassRelationInput, FullImportGraph,
+    FullImportRequest, GroupKey, HistoryId, HistoryMetadata, IdentityScopeKey, ImportAtomicity,
+    ImportClassInput, ImportClassRelationInput, ImportCollectionInput,
+    ImportCollectionPermissionInput, ImportCollisionPolicy, ImportEventSinkInput,
+    ImportEventSubscriptionInput, ImportExportTemplateInput, ImportGraph, ImportGroupInput,
+    ImportGroupMembershipInput, ImportIdentityScopeInput, ImportMembershipSourceInput, ImportMode,
+    ImportObjectInput, ImportObjectRelationInput, ImportPermissionPolicy, ImportPrincipalInput,
+    ImportPrincipalSubtype, ImportRemoteTargetInput, ImportRequest, ImportResultId,
+    ImportRunResult, ImportTaskDetails, ImportTaskResultResponse, LDAP_PROVIDER_KIND,
+    LOCAL_IDENTITY_SCOPE, LOCAL_PROVIDER_KIND, LoginRateLimitConfig, LoginRateLimitEntry,
+    LoginRateLimitState, LogoutTokenRequest, NetworkConfig, NewEventSink, NewEventSubscription,
+    ObjectHistory, ObjectKey, PaginationConfig, PermissionConfig, PermissionId, Permissions,
+    PersonalComputedFieldDefinitionRequest, PrincipalId, PrincipalKey, PrincipalSettings,
+    ProbeResponse, Provenance, ProvenanceActor, ProvenancePrincipal, RESTORE_CONFIRMATION_PHRASE,
+    ReleaseRateLimitResponse, RemoteCallConfig, RemoteCallResultId, RemoteTargetHistory,
+    RestoreCapability, RestoreConfig, RestoreConfirmRequest, RestoreId, RestoreJobStatus,
+    RestoreStageResponse, RestoreTimestamps, RestoreValidationSummary, RunningConfig,
+    RunningLoginRateLimitConfig, SecretStatus, ServerConfig, SharedComputedScope, TaskConfig,
+    TaskDetails, TaskEventId, TaskEventResponse, TaskId, TaskKind, TaskLinks, TaskProgress,
+    TaskQueueStateResponse, TaskResponse, TaskStatus, TlsConfig, Token, TokenId,
     TokenResourceScope, TokenScopeDetails, TypedObject, UnifiedSearchBatchResponse,
     UnifiedSearchDoneEvent, UnifiedSearchErrorEvent, UnifiedSearchEvent, UnifiedSearchKind,
     UnifiedSearchNext, UnifiedSearchResponse, UnifiedSearchResults, UnifiedSearchStartedEvent,
